# streamfiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: c-cpp.yml  master-artifact-build.yml
Client/: main.cpp
Server/: main.cpp
src/: FileWriter.cpp  FileWriter.h  TCPStreamReader.cpp  TCPStreamReader.h  main.cpp
src/DiskWriter/: ConsoleWriter.cpp  ConsoleWriter.h  DiskWriter.cpp  DiskWriter.h  IFileWriter.h  ITextOutput.h
src/SocketCommunication/: Connection.cpp  Connection.h  MultiClientTCPStreamListener.cpp  MultiClientTCPStreamListener.h  TCPStreamReader.cpp  TCPStreamReader.h
src/Utilities/: Logger.h  TimeStampUtils.h
tests/: DiskWriterTests.cpp  gtest_main.cpp
